--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <h1>Tabulky v HTML</h1>
     </header>
     <main>
-        <table>
+        <section>
+        <table class="tabulka">
             <caption class="nadpis-tabulka">
                 Snowboarding: ženy U-rampa
             </caption>
@@ -60,9 +61,11 @@
                     </td>
                 </tr>
             </tfoot>
+        </section>
+        <section>
         </table>
         <h2>Tabulka</h2>
-        <table>
+        <table class="tabulka">
             <tbody>
                 <tr>
                     <td rowspan="3" class="radek"><img src="img/logo.jpg" alt="logo ZOH 2022" class="logo"></td>
@@ -83,5 +86,5 @@
         <p>&copy; Vítězslav Nikel, 2022</p>
     </footer>
 </body>
-
+</section>
 </html>
